policies/require-pod-probes/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-pod-probes
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: require-pod-probes
    rule: validate-probes
    kind: Pod
    resources:
      - good-pod-probes
      - good-pod-startup-only
    result: pass
  - policy: require-pod-probes
    rule: validate-probes
    kind: Pod
    resources:
      - bad-pod-no-probes
      - bad-pod-one-container-missing
    result: fail
  - policy: require-pod-probes
    rule: validate-probes
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
